# n64gal

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  dream.md  issue.md
.github/workflows/: ci-matrix.yml  release-preflight.yml  riscv-perf-report.yml
assets/demo/: demo.vnpak  manifest.json
assets/demo/images/: images.json
assets/demo/scripts/: S0.vns.txt  S1.vns.txt  S10.vns.txt  S2.vns.txt  S3.vns.txt
docs/: backend-porting.md  compat-matrix.md  ecosystem-governance.md  errors.md  extension-manifest.md  host-sdk.md  jit-strategy.md  migration.md  perf-dirty-2026-03-07.md  perf-dynres-2026-03-07.md  perf-report.md  perf-rvv-2026-03-06.md  perf-windows-x64-2026-03-07.md  perf-x64-hosts-2026-03-09.md  platform-matrix.md  preview-protocol.md  project-layout.md  release-checklist-v0.1.0-alpha.md  release-checklist-v1.0.0.md  release-evidence-v0.1.0-alpha.md  release-evidence-v1.0.0.md  release-gap-v0.1.0-mvp.md  release-package-v0.1.0-alpha.md  release-package-v1.0.0.md  release-publish-v0.1.0-alpha.json  release-publish-v1.0.0.json  release-roadmap-1.0.0.md  release-triage-v1.0.0.md  release-v0.1.0-alpha.md  release-v1.0.0.md  riscv-toolchain.md  toolchain.md  vnsave-version-policy.md
docs/api/: README.md  backend.md  compat-log.md  dirty-tile-draft.md  pack.md  runtime.md  save.md
examples/host-embed/: README.md  linux_tty_loop.c  session_loop.c  windows_console_loop.c
include/: vn_backend.h  vn_error.h  vn_frontend.h  vn_pack.h  vn_preview.h  vn_renderer.h  vn_runtime.h  vn_save.h  vn_types.h  vn_vm.h
scripts/: check_api_docs_sync.sh  check_c89.sh
scripts/ci/: build_riscv64_cross.sh  run_cc_suite.sh  run_perf_smoke_suite.sh  run_riscv64_qemu_perf_report.sh  run_riscv64_qemu_suite.sh  run_windows_suite.ps1
scripts/release/: run_demo_soak.sh  run_host_sdk_smoke.sh  run_platform_evidence.sh  run_preview_evidence.sh  run_release_bundle.sh  run_release_export.sh  run_release_gate.sh  run_release_preflight.sh  run_release_publish_map.sh  run_release_remote_summary.sh  run_release_report.sh
src/: main.c
src/backend/avx2/: avx2_backend.c  avx2_fill_fade.c  avx2_internal.h  avx2_textured.c
src/backend/common/: pixel_pipeline.c  pixel_pipeline.h
src/backend/neon/: neon_backend.c
src/backend/rvv/: rvv_backend.c
src/backend/scalar/: scalar_backend.c
src/core/: backend_registry.c  build_config.h  dynamic_resolution.c  dynamic_resolution.h  error.c  pack.c  platform.c  platform.h  renderer.c  runtime_cli.c  runtime_input.c  runtime_internal.h  runtime_parse.c  runtime_persist.c  runtime_session_loop.c  runtime_session_support.c  save.c  vm.c
src/frontend/: dirty_tiles.c  dirty_tiles.h  render_ops.c
src/tools/: preview_cli.c  preview_internal.h  preview_parse.c  preview_report.c  previewd_main.c
templates/host-embed/: README.md  template.json
templates/minimal-vn/: README.md  template.json
tests/integration/: test_api_index_contracts_validate.py  test_backend_contracts_validate.py  test_compat_matrix_validate.py  test_ecosystem_contracts_validate.py  test_error_contracts_validate.py  test_host_sdk_contracts_validate.py  test_kernel_bench_summary.py  test_kernel_compare_summary.py  test_manifest_validate.py  test_migration_contracts_validate.py  test_pack_contracts_validate.py  test_perf_build_smoke.py  test_perf_compare_summary.py  test_perf_contracts_validate.py  test_perf_summary.py  test_platform_contracts_validate.py  test_porting_contracts_validate.py  test_preview_contracts_validate.py  test_preview_protocol.c  test_preview_summary.py  test_release_audit_validate.py  test_release_bundle_script.py  test_release_contracts_validate.py  test_release_docs_validate.py  test_release_export_script.py  test_release_gate_script.py  test_release_host_sdk_smoke.py  test_release_platform_evidence.py  test_release_preflight_script.py  test_release_preview_evidence.py  test_release_publish_map_script.py  test_release_remote_state_validate.py  test_release_remote_summary_script.py  test_release_report_script.py  test_release_soak_script.py  test_runtime_contracts_validate.py  test_save_contracts_validate.py  test_template_contracts_validate.py  test_templates_layout.py  test_toolchain_cli.py  (+2 more)
tests/perf/: backend_kernel_bench.c  check_kernel_thresholds.sh  check_perf_thresholds.sh  compare_kernel_bench.sh  compare_perf.sh  host_cpu.sh  perf_S0.csv  perf_S1.csv  perf_S2.csv  perf_S3.csv  perf_thresholds.csv  report_template.md  run_kernel_bench.sh  run_kernel_compare.sh  run_perf.sh  run_perf_compare.sh  run_perf_compare_revs.sh
tests/unit/: test_avx2_fastpath_parity.c  test_backend_consistency.c  test_backend_priority.c  test_backend_registry.c  test_dirty_tiles.c  test_dynamic_resolution.c  test_error_codes.c  test_platform_paths.c  test_render_ops.c  test_renderer_dirty_submit.c  test_renderer_fallback.c  test_runtime_api.c  test_runtime_cli_errors.c  test_runtime_dynamic_resolution.c  test_runtime_golden.c  test_runtime_input.c  test_runtime_session.c  test_vm.c  test_vnpak.c  test_vnsave.c  test_vnsave_migrate.c  test_vnsave_probe_tool.c
tools/: toolchain.py
tools/migrate/: vnsave_migrate.c
tools/packer/: make_demo_pack.py  make_demo_pack.sh
tools/previewd/: README.md
tools/probe/: kernel_bench_summary.py  kernel_compare_summary.py  perf_compare_summary.py  perf_summary.py  preview_summary.py  trace_summary.py  vnsave_probe.c
tools/scriptc/: build_demo_scripts.sh  compile_vns.py
tools/validate/: validate_api_index_contracts.py  validate_backend_contracts.py  validate_compat_matrix.py  validate_ecosystem_contracts.py  validate_error_contracts.py  validate_host_sdk_contracts.py  validate_manifest.py  validate_migration_contracts.py  validate_pack_contracts.py  validate_perf_contracts.py  validate_platform_contracts.py  validate_porting_contracts.py  validate_preview_contracts.py  validate_release_audit.py  validate_release_contracts.py  validate_release_docs.py  validate_release_remote_state.py  validate_runtime_contracts.py  validate_save_contracts.py  validate_template_contracts.py  validate_toolchain_contracts.py
(+26 files in other folders)
